<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".TaxActivity" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/residence"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/below60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/below60"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/seniorBelow80"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/seniorBelow80"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/above80"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/above80"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/grossIncome"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/grossSalary"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/textborder"
                android:gravity="center"
                android:hint="@string/yearly"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:maxLength="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/hra"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/hra"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/textborder"
                android:gravity="center"
                android:hint="@string/yearly"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:maxLength="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/investment"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/investment"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/textborder"
                android:gravity="center"
                android:hint="@string/yearly"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:maxLength="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal" >
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="Tax Rate:"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/taxRate"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/eduCess"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/eduCess"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:text="@string/tax"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/incomeTax"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@drawable/buttonselector"
                android:onClick="calculateTax"
                android:text="@string/calculate"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:background="@drawable/buttonselector"
                android:onClick="reset"
                android:text="Reset"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">

        <com.google.ads.AdView
            android:id="@+id/ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="a151ceaa8adc3ba"
            ads:loadAdOnCreate="true" />
    </LinearLayout>

</RelativeLayout>